レスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="utf-8">
   <title>profile</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width">
 </head>
 <body>
-  <header>
+  <header id="header">
     <p class="header-title">Profile</p>
     <nav>
-      <ul>
+      <ul class="header-ul">
         <li>About</li>
         <li>Bicycle</li>
       </ul>
@@ -31,20 +32,20 @@
     </div>
   </section>
   <section id="bicycle">
-    <h1 class="section-title">Bycycle</h1>
-    <ul>
+    <h1 class="section-title">Bicycle</h1>
+    <ul class="bicycle-ul">
       <li>
-        <img src="bicycle1.jpg" alt="テキストテキストテキスト">
+        <img src="img/bicycle1.jpg" alt="テキストテキストテキスト">
         <h3>タイトルタイトル</h3>
         <p>テキストテキスト</p>
       </li>
       <li>
-        <img src="bicycle2.jpg" alt="テキストテキストテキスト">
+        <img src="img/bicycle2.jpg" alt="テキストテキストテキスト">
         <h3>タイトルタイトル</h3>
         <p>テキストテキスト</p>
       </li>
       <li>
-        <img src="bicycle3.jpg" alt="テキストテキストテキスト">
+        <img src="img/bicycle3.jpg" alt="テキストテキストテキスト">
         <h3>タイトルタイトル</h3>
         <p>テキストテキスト</p>
       </li>
