初級編レスポンシブ

--- a/beginner/index.html
+++ b/beginner/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="title-list">
-        <h1>WED</h1>
+        <h1 class="header-title">WED</h1>
         <nav class="header-nav">
           <ul class="header-ul">
             <li class="header-li">NEWS</li>
@@ -114,7 +114,7 @@
       <div id="company-img"></div>
     </section>
     <footer>
-      <div class="wrapper">
+      <div class="footer-div">
         <div class="footer-flex">
           <div>
             <h1>WED</h1>
