中級編レスポンシブ

--- a/中級編/index.html
+++ b/中級編/index.html
@@ -28,10 +28,6 @@
     </header>
     <main>
       <div id="mainvisual">
-        <div class="mainvisual-text">
-          <p>話して学ぼう！<br />BBB英会話スクール</p>
-          <a href="#">無料体験はこちら</a>
-        </div>
         <ul>
           <li class="image-container">
             <img src="../img/mainvisual1.jpeg" alt="" />
@@ -43,6 +39,10 @@
             <img src="../img/mainvisual3.jpeg" alt="" />
           </li>
         </ul>
+        <div class="mainvisual-text">
+          <p>話して学ぼう！<br />BBB英会話スクール</p>
+          <a href="#">無料体験はこちら</a>
+        </div>
       </div>
       <section id="reason">
         <h2>BBBが選ばれる理由</h2>
@@ -77,7 +77,7 @@
             </p>
           </div>
         </div>
-        <div class="chat">
+        <div class="chat2">
           <div class="text">
             <p>
               テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br />
@@ -165,7 +165,7 @@
         </li>
         <li>
           <p>講師紹介</p>
-          <ul>
+          <ul class="menu">
             <li>講師について</li>
             <li>講師一覧</li>
             <li>講師を探す</li>
@@ -173,14 +173,14 @@
         </li>
         <li>
           <p>会社情報</p>
-          <ul>
+          <ul class="menu">
             <li>会社概要</li>
             <li>採用情報</li>
           </ul>
         </li>
         <li>
           <p>BBBについて</p>
-          <ul>
+          <ul class="menu">
             <li>よくあるご質問</li>
             <li>ご利用規約</li>
             <li>プライバシーポリシー</li>
