--- a/中級編/index.html
+++ b/中級編/index.html
@@ -45,7 +45,7 @@
         </div>
       </div>
       <section id="reason">
-        <h2>BBBが選ばれる理由</h2>
+        <h2 class="section-title">BBBが選ばれる理由</h2>
         <div class="flame">
           <div class="reason-left">
             <img src="../img/icon-pc.png" alt="" />
@@ -64,7 +64,7 @@
         </div>
       </section>
       <section id="voice">
-        <h2>受講生の声</h2>
+        <h2 class="section-title">受講生の声</h2>
         <div class="chat">
           <div class="profile">
             <img src="../img/face-icon.png" alt="" />
@@ -103,7 +103,7 @@
         </div>
       </section>
       <section id="summary">
-        <h2>スクールの概要</h2>
+        <h2 class="section-title">スクールの概要</h2>
         <ul>
           <li>
             <h3>
