--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       <div id="mainvisual">
         <ul>
           <li class="image-container">
-            <img src="../img/mainvisual1.jpeg" alt="" />
+            <img src="img/mainvisual1.jpeg" alt="" />
           </li>
           <li class="image-container">
-            <img src="../img/mainvisual2.jpeg" alt="" />
+            <img src="img/mainvisual2.jpeg" alt="" />
           </li>
           <li class="image-container">
-            <img src="../img/mainvisual3.jpeg" alt="" />
+            <img src="img/mainvisual3.jpeg" alt="" />
           </li>
         </ul>
         <div class="mainvisual-text">
@@ -48,14 +48,14 @@
         <h2 class="section-title">BBBが選ばれる理由</h2>
         <div class="flame">
           <div class="reason-left">
-            <img src="../img/icon-pc.png" alt="" />
+            <img src="img/icon-pc.png" alt="" />
             <div>
               <p>オンライン対応</p>
               <p>24時間いつでも対応できる!</p>
             </div>
           </div>
           <div class="reason-right">
-            <img src="../img/icon-teacher.png" alt="" />
+            <img src="img/icon-teacher.png" alt="" />
             <div>
               <p>講師はネイティブ</p>
               <p>お気に入りの講師が自由に選べる</p>
@@ -67,7 +67,7 @@
         <h2 class="section-title">受講生の声</h2>
         <div class="chat">
           <div class="profile">
-            <img src="../img/face-icon.png" alt="" />
+            <img src="img/face-icon.png" alt="" />
             <p>〇〇〇さん<br />大学生</p>
           </div>
           <div class="text">
@@ -85,13 +85,13 @@
             </p>
           </div>
           <div class="profile">
-            <img src="../img/face-icon.png" alt="" />
+            <img src="img/face-icon.png" alt="" />
             <p>〇〇〇さん<br />会社員</p>
           </div>
         </div>
         <div class="chat">
           <div class="profile">
-            <img src="../img/face-icon.png" alt="" />
+            <img src="img/face-icon.png" alt="" />
             <p>〇〇〇さん<br />自営業</p>
           </div>
           <div class="text">
