--- a/上級編/index.html
+++ b/上級編/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>上級</title>
     <link rel="stylesheet" href="main.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+    />
   </head>
   <body>
     <header>
@@ -32,18 +42,177 @@
     <div id="video">
       <video autoplay muted loop>
         <source src="img/video.mp4" type="video/mp4" />
-        お使いのブラウザはvideoタグをサポートしていません。
       </video>
     </div>
     <section id="pickup">
-      <h2>PICK UP</h2>
-      <ul>
-        <li></li>
+      <h2 class="section-title">PICK UP</h2>
+      <ul class="carousel">
+        <li>
+          <img src="img/pickup1.jpg" alt="" />
+        </li>
+        <li>
+          <img src="img/pickup2.jpg" alt="" />
+        </li>
+        <li>
+          <img src="img/pickup3.jpg" alt="" />
+        </li>
+        <li>
+          <img src="img/pickup4.jpg" alt="" />
+        </li>
+        <li>
+          <img src="img/pickup5.jpg" alt="" />
+        </li>
+        <li>
+          <img src="img/pickup6.jpg" alt="" />
+        </li>
+        <li>
+          <img src="img/pickup7.jpg" alt="" />
+        </li>
+        <li>
+          <img src="img/pickup8.jpg" alt="" />
+        </li>
+        <li>
+          <img src="img/pickup9.jpg" alt="" />
+        </li>
       </ul>
     </section>
-    <section id="feature"></section>
-    <section id="contact"></section>
-    <footer></footer>
+    <section id="feature">
+      <h2 class="section-title">FEATURE</h2>
+      <div class="grid">
+        <div class="item">
+          <img src="img/feature1.jpg" alt="" />
+          <div class="card-body">
+            <p class="category">category</p>
+            <p class="text">
+              テキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+            <p class="date">XXXX.XX.XX</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="img/feature1.jpg" alt="" />
+          <div class="card-body">
+            <p class="category">category</p>
+            <p class="text">
+              テキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+            <p class="date">XXXX.XX.XX</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="img/feature1.jpg" alt="" />
+          <div class="card-body">
+            <p class="category">category</p>
+            <p class="text">
+              テキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+            <p class="date">XXXX.XX.XX</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="img/feature1.jpg" alt="" />
+          <div class="card-body">
+            <p class="category">category</p>
+            <p class="text">
+              テキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+            <p class="date">XXXX.XX.XX</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="img/feature1.jpg" alt="" />
+          <div class="card-body">
+            <p class="category">category</p>
+            <p class="text">
+              テキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+            <p class="date">XXXX.XX.XX</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="img/feature1.jpg" alt="" />
+          <div class="card-body">
+            <p class="category">category</p>
+            <p class="text">
+              テキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+            <p class="date">XXXX.XX.XX</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="img/feature1.jpg" alt="" />
+          <div class="card-body">
+            <p class="category">category</p>
+            <p class="text">
+              テキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+            <p class="date">XXXX.XX.XX</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="img/feature1.jpg" alt="" />
+          <div class="card-body">
+            <p class="category">category</p>
+            <p class="text">
+              テキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+            <p class="date">XXXX.XX.XX</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="img/feature1.jpg" alt="" />
+          <div class="card-body">
+            <p class="category">category</p>
+            <p class="text">
+              テキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+            <p class="date">XXXX.XX.XX</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="contact">
+      <h2 class="section-title">CONTACT</h2>
+      <div class="contact-container">
+        <div class="contact-info">
+          <p>テキストテキストテキスト</p>
+          <p>
+            テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+          </p>
+          <p>
+            テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+          </p>
+        </div>
+        <div class="contact-form">
+          <form action="#">
+            <dl>
+              <dt>Name:</dt>
+              <dd><input type="text" class="custom-input" /></dd>
+            </dl>
+            <dl>
+              <dt>Mail:</dt>
+              <dd><input type="text" class="custom-input" /></dd>
+            </dl>
+            <dl>
+              <dt>Massage:</dt>
+              <dd><textarea type="text" class="custom-input"></textarea></dd>
+            </dl>
+          </form>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p>© Sneakers</p>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
     <script src="index.js"></script>
   </body>
 </html>
